//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY
//BAD!!! DON'T START NAMES WITH NEW OR COPY

package com.lvl6.proto;

option java_outer_classname = "UserProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

//------------------------------------------------------------------------------------------

//put in here because MinimumUserProto uses it.
//Was in Clan.proto but that file references this file, so
//import cycle is created, so not allowed.
message MinimumClanProto {
	optional int32 clanId = 1;
	optional string name = 2;
	optional int32 ownerId = 3;
	optional int64 createTime = 4;
	optional string description = 5;
	optional string tag = 6;
	optional bool requestToJoinRequired = 7;
}

//------------------------------------------------------------------------------------------

message MinimumUserProto {
	optional int32 userId = 1;
	optional string name = 2;
	optional MinimumClanProto clan = 3;
}

//------------------------------------------------------------------------------------------

message MinimumUserProtoWithLevel {
	optional MinimumUserProto minUserProto = 1;
	optional int32 level = 2;
}

//------------------------------------------------------------------------------------------

message MinimumUserProtoWithFacebookId {
	optional MinimumUserProto minUserProto = 1;
	optional string facebookId = 2;
}

//------------------------------------------------------------------------------------------

message UserFacebookInviteForSlotProto {
	optional int32 inviteId = 1;
	optional MinimumUserProtoWithFacebookId inviter = 2;
	optional string recipientFacebookId = 3;
	optional int64 timeOfInvite = 4;
	optional int64 timeAccepted = 5;
}

//------------------------------------------------------------------------------------------

message FullUserProto {
	optional int32 userId = 1;
    optional string name = 2;
    optional int32 level = 3;
	optional int32 gems = 4;
	optional int32 cash = 5;
	optional int32 oil = 42; 
	optional int32 experience = 6;
	optional int32 tasksCompleted = 7;
	optional int32 battlesWon = 8;
	optional int32 battlesLost = 9;
	optional int32 flees = 10;
	optional string referralCode = 11;
	optional int32 numReferrals = 12;
	//optional string udid = 13; //defined below
	optional int64 lastLoginTime = 14;
	optional int64 lastLogoutTime = 15;
	//optional string deviceToken = 16; //defined below
	//optional int64 lastBattleNotificationTime = 17; //defined below
	//optional int32 numBadges = 18; //defined below
	optional bool isFake = 19;
	//optional int64 createTime = 20; //defined below
	optional bool isAdmin = 21;
	//optional int32 apsalarId = 22; //defined below
	optional int32 numCoinsRetrievedFromStructs = 23;
	optional int32 numOilRetrievedFromStructs = 43;
	//optional int32 numConsecutiveDaysPlayed = 24; defined below
	optional MinimumClanProto clan = 25;
	//optional int64 lastWallPostNotificationTime lwpnt = 26;
	//optional string kabamNaid = 27;
	optional bool hasReceivedfbReward = 28;
	optional int32 numAdditionalMonsterSlots = 29;
	optional int32 numBeginnerSalesPurchased = 30;
	optional bool hasActiveShield = 31; 
	optional int64 shieldEndTime = 32;
	optional int32 elo = 33;
	optional string rank = 34;
	optional int64 lastTimeQueued = 35; 
	optional int32 attacksWon = 36;
	optional int32 defensesWon = 37;
	optional int32 attacksLost = 38;
	optional int32 defensesLost = 39;
	optional string facebookId = 40;
	//optional int32 nthExtraSlotsViaFb = 41; //defined below
	//optional int32 oil = 42; //defined above
	//optional int32 numOilRetrievedFromStructs = 43; //defined above

	//CreateInfoProtoUtils.java doesn't set these (I can't think of a time the client would need this
	//consider making other fields like this
	optional string udid = 13;
	optional string deviceToken = 16;
	optional int64 lastBattleNotificationTime = 17;
	optional int32 numBadges = 18;
	optional int64 createTime = 20;
	optional int32 apsalarId = 22;
	optional int32 numConsecutiveDaysPlayed = 24;
	optional int64 lastWallPostNotificationTime = 26;
	optional string kabamNaid = 27;
	optional int32 nthExtraSlotsViaFb = 41;
}

//------------------------------------------------------------------------------------------

message StaticUserLevelInfoProto {
	optional int32 level = 1;
	optional int32 requiredExperience = 2; 
}

//------------------------------------------------------------------------------------------
